@@ -2,6 +2,7 @@ Changelog for current version:
   * Show the error texts from twitter when displaying an error. Should make it easier to understand things like why DMs fail.
   * Don't retreive old tweets when rejoining a search. Behaviour is now similar to a regular timeline.
   * Allow customization of the insertion of the search text in tweets: never, prepended, or appended (set on a per-search basis). Default is never.
+  * Show rate limit status as the topic for chats and timeline(s)
 
 Changelog for 0.6.3:
   * Fix make install target
